--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: "Nafis' Blog"
 		<div class="flex-1">
 			<h1><a href="{{ post.url }}">{{ post.title }}</h1>
 		</div>
-		<span class="order-last">{{ post.date }}</span>
+		<span class="order-last">{{ post.date | %b %d, %y }}</span>
 	</div>
   {% endfor %}
 
