--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ title: "Nafis' Blog"
 {% for post in paginator.posts %}
 	<div class="flex">
 		<div class="flex-1">
-			<h1><a href="{{ post.url }}">{{ post.title }}</h1>
+			<h2><a href="{{ post.url }}" class="text-sky-500">{{ post.title }}</a></h2>
 		</div>
-		<span class="order-last">{{ post.date | %b %d, %y }}</span>
+		<span class="order-last">{{ post.date | date: "%b %d, %y" }}</span>
 	</div>
   {% endfor %}
 
