--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: "Home"
 ---
 <!-- This loops through the paginated posts -->
 {% for post in paginator.posts %}
@@ -12,20 +13,20 @@ layout: default
   {% endfor %}
 
 <!-- Pagination links -->
-<div class="flex">
+<div class="flex justify-between">
   {% if paginator.previous_page %}
-    <a href="{{ paginator.previous_page_path }}" class="previous">
+    <a href="{{ paginator.previous_page_path }}" class="order-1">
       Previous
     </a>
   {% else %}
-    <span class="previous">Previous</span>
+    <span class="order-1 text-gray-500">Previous</span>
   {% endif %}
-  <span class="page_number ">
+  <span class="order-2">
     Page: {{ paginator.page }} of {{ paginator.total_pages }}
   </span>
   {% if paginator.next_page %}
     <a href="{{ paginator.next_page_path }}" class="order-last">Next</a>
   {% else %}
-    <span class="order-last">Next</span>
+    <span class="order-last text-gray-500">Next</span>
   {% endif %}
 </div>
