--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: "Home"
   {% endfor %}
 
 <!-- Pagination links -->
-<div class="flex justify-between">
+<div class="flex justify-between my-5">
   {% if paginator.previous_page %}
     <a href="{{ paginator.previous_page_path }}" class="order-1">
       Previous
