--- a/categories.html
+++ b/categories.html
@@ -12,7 +12,7 @@ title: Categories
     <div id="#{{ category_name | slugize }}"></div>
     <p></p>
 
-    <h3 class="category-head text-xl">{{ category_name }}</h3>
+    <h1 class="category-head text-3xl dark:text-white">{{ category_name }}</h1>
     <a name="{{ category_name | slugize }}"></a>
     {% for post in site.categories[category_name] %}
     <article class="archive-item container mb-12">
