--- a/categories.html
+++ b/categories.html
@@ -3,15 +3,20 @@ layout: default
 permalink: "/categories/"
 title: "Categories"
 ---
-
-{% include header.html %}
-
 <header class="bg-teal-900 text-white py-6 text-center">
   <h1 class="text-3xl font-bold">Categories</h1>
   <p class="text-lg mt-2">Browse writing based on the topic</p>
 </header>
-
 <main class="max-w-6xl mx-auto px-4 py-8">
+  <!-- Navigation-->
+  <nav class="mb-8 text-center">
+    <ul class="flex flex-wrap justify-center gap-4">
+      {% for category in site.categories %}
+        {% capture category_name %}{{ category | first }}{% endcapture %}
+        <li><a href="#{{ category_name | slugify }}" class="px-3 py-1 bg-teal-900 dark:bg-teal-700 text-white rounded hover:opacity-75">{{ category_name }}</a></li>
+      {% endfor %}
+    </ul>
+  </nav>
   {% for category in site.categories %}
     {% capture category_name %}{{ category | first }}{% endcapture %}
     <h2 id="{{ category_name | slugify }}" class="text-2xl font-bold text-teal-900 dark:text-teal-300 mb-4">
