--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Home"
+title: "Beranda"
 ---
 <!-- This loops through the paginated posts -->
 <main class="max-w-6xl mx-auto px-4 py-8">
